Add index wrapper around versioned javadocs to allow selecting different versions
versions.js will be generated at release time
index.html loads populates dropdown with content from versions.js

Dropdown will be populated similar to:
```
X.X.2 [Current]
X.X.1
-------------------
Development
-------------------
0.0.4 [Legacy]
```

--- a/index.html
+++ b/index.html
@@ -40,8 +40,9 @@ for (version of window.apiVersions.versions) {
 }
 
 addSeparator();
-addVersion('development', 'Development');
-addSeparator();
+// TODO: add dev version in the future
+// addVersion('development', 'Development');
+// addSeparator();
 
 for (version of window.apiVersions.legacy) {
   addVersion(version, version + ' [Legacy]');
