Updates based on code review

--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@ for (version of window.apiVersions.legacy) {
 
 $('#currentSelection').html(window.apiVersions.current + ' [Current] <span class="caret"></span>');
 
-$('#versionsList').append()
-window.apiVersions.current
+$('#versionsList').append();
 
   $(".dropdown .dropdown-menu li a").click(function(){  
     $(this).parents(".dropdown").find('.dropdown-toggle').html($(this).text() + ' <span class="caret"></span>');
